--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
         <!-- second blog post -->'
         <article class="blog">
           <img
-            src="./pexels-juan-pablo-serrano-arenas-894695.jpg"
-            alt="coffee-image"
+            src="./pexels-ylanite-koppens-934070.jpg"
+            alt="cloth-image"
             class="image"
           />
           <div class="blog-content">
-            <span>lifestyle <i class="fa-solid fa-mug-hot"></i></span>
-            <h2>seven reason why cofee is awesome</h2>
+            <span>fashion<i class="fa-solid fa-user-tie"></i>
+            <h2>why black is always in style</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius,
               enim iure eveniet maxime aspernatur beatae blanditiis quibusdam
