Add a word to the end

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h2>why black is always in style</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius,
-              enim iure eveniet maxime aspernatur beatae blanditiis quibusdam
+              enim iure eveniet maxime aspernatur beatae blanditiis quibusdams
             </p>
             <a href="#">read more</a>
           </div>
