--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <span>fashion<i class="fa-solid fa-user-tie"></i>
             <h2>why black is always in style</h2>
             <p>
+              lorem
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius,
               enim iure eveniet maxime aspernatur beatae blanditiis quibusdams
             </p>
